enhanced the Workflow Gamelan architecture to support both high-performance   distributed mode and a lightweight standalone/local mode by introducing a clean abstraction   layer for all critical components.
  Standalone/Local Mode Enhancements
  To ensure the engine can run without external Redis in standalone mode, I've implemented the
  following:

   * Task Queuing Abstraction: Created a TaskQueue interface with two implementations:
       * RedisTaskQueue: Uses Redis Streams and Consumer Groups for distributed reliability.
       * InMemoryTaskQueue: Uses a reactive Mutiny UnicastProcessor for high-performance
         in-memory task dispatching, perfect for single-instance local runs.
   * Distributed Locking Abstraction: Created a DistributedLockManager interface:
       * RedisDistributedLockManager: For multi-node coordination.
       * InMemoryDistributedLockManager: A thread-safe local implementation for standalone
         mode.
   * Retry Management: Introduced a RetryManager interface:
       * RedisRetryManager: Uses Redis Sorted Sets for distributed retry scheduling.
       * InMemoryRetryManager: Handles retries in-memory for local deployments.
   * Conditional Activation: Leveraged Quarkus @IfBuildProperty to automatically select the
     correct implementation based on the environment:
       * Standalone Mode: Defaults to local (In-memory/H2).
       * Distributed Mode: Configured for redis (Redis Streams/Postgres).

  Optimization Highlights
   * Reactive Orchestration: Both RedisTaskQueue and InMemoryTaskQueue are fully non-blocking,
     leveraging the Vert.x event loop and Mutiny for maximum throughput.
   * Surgical Persistence: The InMemoryWorkflowRunRepository was updated to support the same
     surgical JSONB update pattern as the PostgreSQL version, ensuring performance consistency
     across environments.
   * Unified Worker: The TaskWorker is now implementation-agnostic, allowing it to consume
     tasks seamlessly regardless of wheth